Add some icons & Simplifiy section

--- a/resume.tex
+++ b/resume.tex
@@ -18,7 +18,7 @@
       \homepage[Blog]{https://ipotato.me}
 }
 
-\section{\en{Education}\zh{教育经历}}
+\section{\faGraduationCap\ \en{Education}\zh{教育经历}}
 \en{\datedsubsection{\textbf{Beijing University of Posts and Telecommunications}, Undergraduate}{09/2017 -- Present}}
 \zh{\datedsubsection{\textbf{北京邮电大学}, 在读本科}{2017/09 -- 至今}}
 \begin{itemize}
@@ -26,7 +26,7 @@
             \zh{计算机科学与技术，计算机学院，2021 年毕业}
 \end{itemize}
 
-\section{\en{Work Experience}\zh{工作经历}}
+\section{\faUsers\ \en{Work Experience}\zh{工作经历}}
 \en{\datedsubsection{\textbf{\href{https://www.bytedance.com/en/}{ByteDance Inc.}}, Beijing, China}{09/2019 -- 04/2020}}
 \zh{\datedsubsection{\textbf{\href{https://www.bytedance.com/zh/}{北京字节跳动科技有限公司（ByteDance Inc.）}}}{2019/09 -- 2020/04}}
 \en{\role{App Back-end Research \& Develop}{R\&D Intern, Golang/Python}}
@@ -49,7 +49,7 @@
             \zh{负责 ToB 客户的技术接洽沟通，搭建符合其需求的 AWS 产品架构，为客户提供成熟的云架构解决方案}
 \end{itemize}
 
-\section{\en{Portfolios}\zh{个人项目}}
+\section{\faGithubAlt\ \en{Portfolios}\zh{个人项目}}
 \datedsubsection{\textbf{Infomatter}}{}
 \en{Information aggregation system based on machine learning}
 \zh{基于机器学习的信息聚合系统}
@@ -96,17 +96,17 @@
             \zh{使用了类 Flask 的路由功能和 HTTP 封装}
 \end{itemize}
 
-\section{\en{Personal Experience}\zh{个人经历}}
-\en{\datedsubsection{\textbf{BUPT BYRIO Open Source Community}, Beijing}{2018 -- Present}}
-\zh{\datedsubsection{\textbf{北京邮电大学 BYRIO 开源社区}}{2018 -- 至今}}
-\en{\role{Developer}{Tec Department}}
-\zh{\role{开发者}{技术部}}
-\begin{itemize}
-      \item \en{Participate in the development and maintenance of community products, such as: campus gym appointment system and GPA calculation script.}
-            \zh{参加北邮校园相关产品的开发与维护，如：校园健身房预约系统，北邮教务绩点查询计算脚本}
-\end{itemize}
+% \section{\faLinkedin\ \en{Personal Experience}\zh{个人经历}}
+% \en{\datedsubsection{\textbf{BUPT BYRIO Open Source Community}, Beijing}{2018 -- Present}}
+% \zh{\datedsubsection{\textbf{北京邮电大学 BYRIO 开源社区}}{2018 -- 至今}}
+% \en{\role{Developer}{Tec Department}}
+% \zh{\role{开发者}{技术部}}
+% \begin{itemize}
+%       \item \en{Participate in the development and maintenance of community products, such as: campus gym appointment system and GPA calculation script.}
+%             \zh{参加北邮校园相关产品的开发与维护，如：校园健身房预约系统，北邮教务绩点查询计算脚本}
+% \end{itemize}
 
-\section{\en{Skills}\zh{技能}}
+\section{\faCogs\ \en{Skills}\zh{技能}}
 \begin{itemize}[parsep=0.25ex]
       \item \en{\textbf{Programming Language}:
                   experienced in Golang/Python, 
@@ -138,7 +138,7 @@
                   开发过数字货币量化交易策略，使用遗传算法解决过 JobShop 问题}
 \end{itemize}
 
-\section{\en{Miscellaneous}\zh{杂项}}
+\section{\faInfo\ \en{Miscellaneous}\zh{杂项}}
 \begin{itemize}[parsep=0.25ex]
       \item \en{Interests: Distributed System, Cloud, Database and Web application.}
             \zh{兴趣：分布式系统、云、数据库、Web 应用等}
