Update with some details

--- a/resume.tex
+++ b/resume.tex
@@ -109,9 +109,11 @@
 \section{\faCogs\ \en{Skills}\zh{技能}}
 \begin{itemize}[parsep=0.25ex]
       \item \en{\textbf{Programming Language}:
+                  \textbf{multilingual} (not limited to any specific language), 
                   experienced in Golang/Python, 
                   comfortable with Rust/JavaScript/C/C++}
             \zh{\textbf{编程语言}:
+                  \textbf{泛语言}（编程不受特定语言限制），
                   熟悉 Golang/Python，
                   了解 Rust/JavaScript/C/C++ 等}
 
@@ -119,7 +121,7 @@
                   familiar with Linux-based programming,
                   have experience with team tools like Trello, Git, etc.}
             \zh{\textbf{开发工具}:
-                  熟悉 Linux，有 Trello、Git 等团队合作工具的使用经验}
+                  熟悉 Linux，有 Trello、Slack, Git 等团队合作工具的使用经验}
 
       \item \en{\textbf{Distributed System}:
                   taken course MIT 6.824 and PingCAP's Talent Plan,
@@ -129,19 +131,21 @@
                   了解 Raft 算法}
 
       \item \en{\textbf{Others}:
-                  have experience using Redis/Kafka, 
+                  have experience using MySQL/Redis/Kafka, 
                   understand Docker and Docker orchestration concepts, 
                   have experience in developing digital currency quantitative trading strategy, 
                   solved JobShop problem with genetic algorithm.}
             \zh{\textbf{其它}:
-                  有 Redis/Kafka 使用经验，了解容器及容器编排相关概念，
+                  有 MySQL/Redis/Kafka 使用经验，了解容器及容器编排相关概念，
                   开发过数字货币量化交易策略，使用遗传算法解决过 JobShop 问题}
 \end{itemize}
 
 \section{\faInfo\ \en{Miscellaneous}\zh{杂项}}
 \begin{itemize}[parsep=0.25ex]
+      \item \en{Personal tags: self-driven, quick learner, earnest curiosity.}
+            \zh{个人标签：自驱动，学习能力强，做事认真，保持好奇}
       \item \en{Interests: Distributed System, Cloud, Database and Web application.}
-            \zh{兴趣：分布式系统、云、数据库、Web 应用等}
+            \zh{兴趣领域：分布式系统、云、数据库、Web 应用等}
       \item \en{Open-source Contributions: contributed to \texttt{@tikv @talent-plan}, etc.}
             \zh{开源贡献: 为 \texttt{@tikv @talent-plan} 等项目组织贡献过代码}
       \item \en{Selected Courses: OS, Network, Database, Algorithm, Compiler Principle.}
