Update open-source contribution experience

--- a/resume.tex
+++ b/resume.tex
@@ -147,7 +147,7 @@
       \item \en{Interests: Distributed System, Cloud, Database and Web application.}
             \zh{兴趣领域：分布式系统、云、数据库、Web 应用等}
       \item \en{Open-source Contributions: contributed to \texttt{@tikv @talent-plan}, etc.}
-            \zh{开源贡献: 为 \texttt{@tikv @talent-plan} 等项目组织贡献过代码}
+            \zh{开源贡献: 为 \texttt{@tikv @tidb @talent-plan} 等项目组织贡献过代码}
       \item \en{Selected Courses: OS, Network, Database, Algorithm, Compiler Principle.}
             \zh{主修课程：操作系统、计算机网络、数据库系统原理、算法设计与分析、编译原理}
       \item \en{Language Level: English CET-6.}
