--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,7 @@
       \item \en{Participated in R\&D work of UGC and live broadcast, had cross-departmental cooperative development experience with Toutiao, Douyin and Watermelon Video.}
             \zh{参与社区 UGC 和直播相关业务研发，有与头条，抖音和西瓜视频等团队进行过跨部门合作开发经验}
       \item \en{Learned a lot about Web development and DevOps.}
-            \zh{学到了很多 Web 开发与 DevOps 相关知识}
+            \zh{学到了很多关于 Web 开发与 DevOps 的相关知识}
 \end{itemize}
 
 \en{\datedsubsection{\textbf{\href{https://aws.amazon.com/}{AWS Chine Inc.}}, Beijing, China}{05/2020 -- 06/2020}}
@@ -47,6 +47,17 @@
 \begin{itemize}
       \item \en{Responsible for the communication with business customers, build AWS architecture meets their needs, and provide them with mature cloud architecture solutions.}
             \zh{负责 ToB 客户的技术接洽沟通，搭建符合其需求的 AWS 产品架构，为客户提供成熟的云架构解决方案}
+\end{itemize}
+
+\en{\datedsubsection{\textbf{\href{https://pingcap.com/en/}{PingCAP Inc.}}, Beijing, China}{06/2020 -- Present}}
+\zh{\datedsubsection{\textbf{\href{https://pingcap.com/zh/}{北京平凯星辰科技有限公司（PingCAP Inc.）}}}{2020/06 -- 至今}}
+\en{\role{Database R\&D}{Scheduling R\&D Intern}}
+\zh{\role{数据库研发}{调度研发实习}}
+\begin{itemize}
+      \item \en{Responsible for the development of TiDB's scheduling component PD.}
+            \zh{负责 TiDB 调度组件 PD 的研发工作}
+      \item \en{Learned a lot about Distributed System.}
+            \zh{学到了很多关于分布式系统的相关知识}
 \end{itemize}
 
 \section{\faGithubAlt\ \en{Portfolios}\zh{个人项目}}
