Update open-source contribution
Signed-off-by: JmPotato <ghzpotato@gmail.com>

--- a/resume.tex
+++ b/resume.tex
@@ -50,7 +50,7 @@
 \end{itemize}
 
 \en{\datedsubsection{\textbf{\href{https://pingcap.com/en/}{PingCAP Inc.}}, Beijing, China}{06/2020 -- Present}}
-\zh{\datedsubsection{\textbf{\href{https://pingcap.com/zh/}{北京平凯星辰科技有限公司（PingCAP Inc.）}}}{2020/06 -- 至今}}
+\zh{\datedsubsection{\textbf{\href{https://pingcap.com/zh/}{北京平凯星辰科技发展有限公司（PingCAP Inc.）}}}{2020/06 -- 至今}}
 \en{\role{Database R\&D}{Scheduling R\&D Intern}}
 \zh{\role{数据库研发}{调度研发实习}}
 \begin{itemize}
@@ -157,8 +157,8 @@
             \zh{个人标签：自驱动，学习能力强，做事认真，保持好奇}
       \item \en{Interests: Distributed System, Cloud, Database and Web application.}
             \zh{兴趣领域：分布式系统、云、数据库、Web 应用等}
-      \item \en{Open-source Contributions: contributed to \texttt{@tikv @tidb @talent-plan}, etc.}
-            \zh{开源贡献: 为 \texttt{@tikv @tidb @talent-plan} 等项目组织贡献过代码}
+      \item \en{Open-source Contributions: contributed to \texttt{@rust-analyzer @tikv @tidb @talent-plan @etcd}, etc.}
+            \zh{开源贡献: 为 \texttt{@rust-analyzer @tikv @tidb @talent-plan @etcd} 等项目组织贡献过代码}
       \item \en{Selected Courses: OS, Network, Database, Algorithm, Compiler Principle.}
             \zh{主修课程：操作系统、计算机网络、数据库系统原理、算法设计与分析、编译原理}
       \item \en{Language Level: English CET-6.}
