--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,7 @@
       \item \en{Participated in R\&D work of UGC and live broadcast, had cross-departmental cooperative development experience with Toutiao, Douyin and Watermelon Video.}
             \zh{参与社区 UGC 和直播相关业务研发，有与头条，抖音和西瓜视频等团队进行过跨部门合作开发经验}
       \item \en{Learned a lot about Web development and DevOps.}
-            \zh{学到了很多关于 Web 开发与 DevOps 的相关知识}
+            \zh{学到了很多关于 Web 开发与 DevOps 的知识}
 \end{itemize}
 
 \en{\datedsubsection{\textbf{\href{https://aws.amazon.com/}{AWS Chine Inc.}}, Beijing, China}{05/2020 -- 06/2020}}
@@ -55,9 +55,9 @@
 \zh{\role{数据库研发}{调度研发实习}}
 \begin{itemize}
       \item \en{Responsible for the development of TiDB's scheduling component PD.}
-            \zh{负责 TiDB 调度组件 PD 的研发工作}
+            \zh{负责 TiDB 调度组件 PD 的研发工作，调优重构了部分模块，设计并参与了跨数据中心分布式授时服务的开发与维护}
       \item \en{Learned a lot about Distributed System.}
-            \zh{学到了很多关于分布式系统的相关知识}
+            \zh{学到了很多关于分布式系统的知识}
 \end{itemize}
 
 \section{\faGithubAlt\ \en{Portfolios}\zh{个人项目}}
@@ -92,7 +92,7 @@
       \item \en{Based on Tornado Web Framework, use Sqlite3 to store data, separated front-end and back-end models, have certain scalability.}
             \zh{基于 Tornado Web Framework 开发，使用 Sqlite3 存储数据，前后端分离，有一定扩展性}
       \item \en{Support Markdown syntax, LaTeX formula rendering, themes changing, Dropbox backup and other functions.}
-            \zh{支持Markdown语法，LaTeX公式渲染，主题更换以及Dropbox备份等功能}
+            \zh{支持 Markdown 语法，LaTeX 公式渲染，主题更换以及 Dropbox 备份等功能}
 \end{itemize}
 
 \datedsubsection{\textbf{dopamine}}{\url{https://github.com/JmPotato/dopamine}}
@@ -128,18 +128,19 @@
                   熟悉 Golang/Python，
                   了解 Rust/JavaScript/C/C++ 等}
 
+      \item \en{\textbf{Distributed System/Database}:
+                  taken course MIT 6.824 and PingCAP's Talent Plan,
+                  understand the basic theory of distributed system/database,
+                  including but not limited to algorithms such as Raft and Percolator.}
+            \zh{\textbf{分布式系统/数据库}:
+                  自主学习了 MIT 6.824 和 PingCAP's Talent Plan 课程，
+                  了解分布式系统/数据库的基本理论，包括但不限于 Raft 和 Percolator 等算法}
+
       \item \en{\textbf{Developing Tool}:
                   familiar with Linux-based programming,
-                  have experience with team tools like Trello, Git, etc.}
+                  have experience with team tools like Git, Slack, Trello, etc.}
             \zh{\textbf{开发工具}:
-                  熟悉 Linux，有 Trello、Slack, Git 等团队合作工具的使用经验}
-
-      \item \en{\textbf{Distributed System}:
-                  taken course MIT 6.824 and PingCAP's Talent Plan,
-                  understand consensus algorithms like Raft.}
-            \zh{\textbf{分布式系统}:
-                  自主学习了 MIT 6.824 和 PingCAP's Talent Plan 课程，
-                  了解 Raft 算法}
+                  熟悉 Linux，有 Git、Slack、Trello 等团队协作工具的使用经验}
 
       \item \en{\textbf{Others}:
                   have experience using MySQL/Redis/Kafka, 
@@ -153,16 +154,16 @@
 
 \section{\faInfo\ \en{Miscellaneous}\zh{杂项}}
 \begin{itemize}[parsep=0.25ex]
-      \item \en{Personal tags: self-driven, quick learner, earnest curiosity.}
-            \zh{个人标签：自驱动，学习能力强，做事认真，保持好奇}
-      \item \en{Interests: Distributed System, Cloud, Database and Web application.}
-            \zh{兴趣领域：分布式系统、云、数据库、Web 应用等}
+      \item \en{Personal tags: self-driven, quick learner, earnest curiosity, open source lover.}
+            \zh{个人标签：自驱动，学习能力强，做事认真，保持好奇，热爱开源}
+      \item \en{Interests: Distributed System, Database, Cloud and Web application.}
+            \zh{兴趣领域：分布式系统、数据库、云以及 Web 应用等}
       \item \en{Open-source Contributions: contributed to \texttt{@rust-analyzer @tikv @tidb @talent-plan @etcd}, etc.}
             \zh{开源贡献: 为 \texttt{@rust-analyzer @tikv @tidb @talent-plan @etcd} 等项目组织贡献过代码}
       \item \en{Selected Courses: OS, Network, Database, Algorithm, Compiler Principle.}
             \zh{主修课程：操作系统、计算机网络、数据库系统原理、算法设计与分析、编译原理}
-      \item \en{Language Level: English CET-6.}
-            \zh{语言水平：英语 CET-6}
+      \item \en{Language Level: English CET-6, able to conduct daily conversation and essay reading.}
+            \zh{语言水平：英语 CET-6，能够进行日常对话和论文阅读}
 \end{itemize}
 
 \end{document}
