Update the programming language
Signed-off-by: JmPotato <ghzpotato@gmail.com>

--- a/resume.tex
+++ b/resume.tex
@@ -104,12 +104,12 @@
 \begin{itemize}[parsep=0.25ex]
       \item \en{\textbf{Programming Language}:
                   \textbf{multilingual} (not limited to any specific language), 
-                  experienced in Golang/Python, 
-                  comfortable with Rust/JavaScript/C/C++}
+                  experienced in Golang/Rust/Python, 
+                  comfortable with JavaScript/C/C++}
             \zh{\textbf{编程语言}:
                   \textbf{泛语言}（编程不受特定语言限制），
-                  熟悉 Golang/Python，
-                  了解 Rust/JavaScript/C/C++ 等}
+                  熟悉 Golang/Rust/Python，
+                  了解 JavaScript/C/C++ 等}
 
       \item \en{\textbf{Distributed System/Database}:
                   Experience in tuning and deployment of TiDB, know the basic use of K8s and tidb-operator.
@@ -140,7 +140,7 @@
 \section{\faInfo\ \en{Miscellaneous}\zh{杂项}}
 \begin{itemize}[parsep=0.25ex]
       \item \en{\textbf{Open-source Contributions}: contributed to \texttt{@rust-analyzer @etcd @tikv @tidb @talent-plan}, etc.}
-            \zh{\textbf{开源贡献}: 为 \texttt{@rust-analyzer @etcd @tikv @tidb @talent-plan} 等项目组织贡献过代码}
+            \zh{\textbf{开源贡献}: 为 \texttt{@rust @rust-analyzer @etcd @tikv @tidb @talent-plan} 等知名开源项目组织贡献过代码}
       \item \en{\textbf{Passionate about sharing}: I have been writing on my personal blog for years and have accumulated several high-quality technical sharing articles.}
             \zh{\textbf{热爱分享}: 在个人博客上常年坚持写作，积累高质量技术分享文章数篇}
       \item \en{\textbf{Language Level}: English CET-6, ability to conduct daily conversation and essay reading, experience in English presentation.}
